syntax = "proto3"; // 版本声明, 使用Protocol Buffers v3版本

option go_package = "c/proto";  // 指定生成的Go代码在你项目中的导入路径

package proto; // 包名

// 定义服务
service Greeter {
    // SayHello 方法
    rpc SayHello (HelloRequest) returns (HelloResponse) {}

    // server return the stream data
    rpc LotsOfReplies(HelloRequest) returns (stream HelloResponse);

    // client stream
    rpc LotsOfGreetings(stream HelloRequest) returns (HelloResponse);
}

// 请求消息
message HelloRequest {
    string name = 1;
}

// 响应消息
message HelloResponse {
    string reply = 1;
}
